# ecs-network-perf

./: .dockerignore  .env.example  .gitignore  README.md  combined.Dockerfile  docker-compose.yml  example.py  pyproject.toml  sharedvol.Dockerfile  tcp.Dockerfile
combined/services/: finish.sh  gunicorn.sh
copilot/: .workspace
copilot/combined/: manifest.yml
copilot/sharedvol/: manifest.yml
copilot/tcp/: manifest.yml
doc/: arch_diags.py
sharedvol/: nginx.Dockerfile  proxy.conf
tcp/: nginx.Dockerfile  proxy.conf
tcp/templates/: default.conf.template
