[tool.poetry]
name = "ecs-network-perf"
version = "0.1.0"
description = "ECS Network Performance"
authors = ["Mike Fiedler <miketheman@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
starlette = "^0.14.2"
gunicorn = "^20.1.0"
uvicorn = {extras = ["standard"], version = "^0.13.4"}

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
