[tool.poetry]
name = "ecs-network-perf"
version = "0.1.0"
description = "ECS Network Performance"
authors = ["Mike Fiedler <miketheman@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
starlette = "^0.27.0"
gunicorn = "^20.1.0"
uvicorn = {extras = ["standard"], version = "^0.16.0"}

[tool.poetry.dev-dependencies]
black = "^21.12b0"
diagrams = "^0.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
